<resources>
    <string name="app_name">My Application</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string-array name="products">
        <item>Pomidor</item>
        <item>Baklajan</item>
        <item>Ogures</item>
        <item>Makarok</item>
        <item>Xleb</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_product_name">Edit Product Name</string>
    <string name="dialog_title_new_purchase">New Purchase</string>
    <string name="dialog_title_product_data">Product Data</string>
    <string name="product_name_textview">Product Name:</string>
    <string name="product_name_edittext_hint">Product Name...</string>
    <string name="remove_list_element">Remove list element</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="azn">AZN</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="select_currency">Select currency</string>


    <string-array name="currencies">
        <item name="USD">USD</item>
        <item name="AZN">AZN</item>
        <item name="EUR">EUR</item>
    </string-array>
    
    <string-array name="store_names">
        <item name="neptun">Neptun</item>
        <item name="bravo">Bravo</item>
        <item name="araz">Araz Supermarket</item>
    </string-array>


</resources>
